CALCULATOR TABLE LAYOUT

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,5 @@
 
 <resources>
-    <string name="app_name">PATIENT UI</string>
-    <string-array name="blood_group_array">
-        <item>A+</item>
-        <item>A-</item>
-        <item>B+</item>
-        <item>B-</item>
-        <item>AB+</item>
-        <item>AB-</item>
-        <item>O+</item>
-        <item>O-</item>
-    </string-array>
+    <string name="app_name">TABLELAYOUT CALC</string>
+
 </resources>
